fix: gradient shift on narrow devices

--- a/app/globals.css
+++ b/app/globals.css
@@ -48,7 +48,7 @@
 .bg-primary-gradient {
   background-image: linear-gradient(
     to bottom,
-    theme("colors.gradient.from") calc(48rem + 16rem),
+    theme("colors.gradient.from") calc(50vh + 16rem),
     theme("colors.gradient.to")
   );
   background-size: 200% 200%;
@@ -62,7 +62,7 @@
     background-position-y: 0;
   }
   100% {
-    background-position-y: -48rem;
+    background-position-y: -50vh;
   }
 }
 
